# lex

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  pull_request.yml
src/: kind.rs  kind_tests.rs  lex.rs  lex_error.rs  lex_result.rs  lex_tests.rs  lexer.rs  lexer_tests.rs  lib.rs  token.rs  token_tests.rs
src/comments/: block_comments.rs  line_comment.rs  mod.rs  white_line_comments.rs
src/common/: exact.rs  match_prefix.rs
src/config/: comment_config.rs  config.rs  mod.rs  parse_config.rs
src/context/: char.rs  context.rs  error.rs  exact.rs  line_text.rs  match_prefix.rs  mod.rs  parse_context.rs  split.rs  symbol.rs
src/context/comment/: line_comment.rs  line_comment_block.rs  mod.rs  white_line_comments.rs
src/context/comments/: line_comment.rs  line_comment_block.rs  white_line_comments.rs
src/context/common/: exact.rs  mark.rs  match_prefix.rs  mod.rs  symbol.rs
src/context/whitespace/: indent_level.rs  line_ending.rs  mod.rs  rest_of_line.rs  white_lines.rs  whitespace.rs
src/core/: mod.rs  symbol.rs
src/error/: error.rs  lex_result.rs  mod.rs  parse_result.rs  result.rs
src/lexer/: lexer.rs  mod.rs  rule.rs  span.rs  token.rs  token_kind.rs
src/lexer/macros/: lexer.rs
src/lexer/matchers/: digits.rs  ident.rs  keyword.rs  mod.rs  (+3 more)
src/parse/: int_parser.rs  mod.rs
src/parser/: checkpoint.rs  comment_config.rs  mod.rs  parse_error.rs  parser.rs
src/token/: error.rs  mod.rs  split.rs  token.rs  whitespace.rs
src/whitespace/: line_ending.rs  mod.rs  rest_of_line.rs  white_lines.rs  whitespace.rs
tests/: parser.rs
(+5 files in other folders)
