[package]
name = "lex"
version = "0.15.0-rc.1"
description = "This library aids in parsing programming languages."
readme = "README.md"
repository = "https://github.com/nikdeapen/lex"
homepage = "https://github.com/nikdeapen/lex"
authors = ["Nik Deapen <nik@deapen.com>"]
edition = "2024"
license = "MIT"
